[tool.poetry]
name = "hackaphasia-backend"
version = "0.1.0"
description = ""
authors = ["externref <shiva02939@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.6"
attrs = "^24.2.0"
uvicorn = "^0.32.1"
openai = "^1.56.1"
tensorflow = "^2.18.0"
keras = "^3.7.0"
websockets = "^14.1"
aiosqlite = "^0.20.0"
aoi = "^0.1.2"
scikit-learn = "^1.5.2"
pandas = "^2.2.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
